--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </span></a>
             <b id="no">Add List</b></div>
         <div class="box">
-            <a href="./tripParis.html"><h2>Trip to Paris</h2></a> 
+            <a href="./tripParis.html" id="tripRed"><h2>Trip to Paris</h2></a> 
             <div class="disNone">
             <hr>
             <p class="crossed">Completed Tasks</p>
