--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="disNone">
             <hr>
             <p class="crossed">Completed Tasks</p>
-            <label for="pT" style="color:black ;">Pending Tasks</label> 
+            <label for="pT" style="color:black ;">Pending Tasks</label><br>
             <input type="checkbox" name="pT" id="pT">
             </div>
         </div>
