--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="disNone">
                 <hr>
                 <p class="crossed">Completed Tasks</p>
-                <label for="pT" style="color:black ;">Pending Tasks</label> 
+                <label for="pT" style="color:black ;">Pending Tasks</label><br> 
                 <input type="checkbox" name="pT" id="pT">
             </div>
         </div>
@@ -43,7 +43,7 @@
             <div class="disNone">
                 <hr>
                 <p class="crossed">Completed Tasks</p>
-                <label for="pT" style="color:black ;">Pending Tasks</label> 
+                <label for="pT" style="color:black ;">Pending Tasks</label><br> 
                 <input type="checkbox" name="pT" id="pT">
             </div>
         </div>
@@ -52,7 +52,7 @@
             <div class="disNone">
                 <hr>
                 <p class="crossed">Completed Tasks</p>
-                <label for="pT" style="color:black ;">Pending Tasks</label> 
+                <label for="pT" style="color:black ;">Pending Tasks</label><br> 
                 <input type="checkbox" name="pT" id="pT">
             </div>
         </div>
@@ -61,7 +61,7 @@
             <div class="disNone">
                 <hr>
                 <p class="crossed">Completed Tasks</p>
-                <label for="pT" style="color:black ;">Pending Tasks</label> 
+                <label for="pT" style="color:black ;">Pending Tasks</label> <br>
                 <input type="checkbox" name="pT" id="pT">
             </div>             
         </div>             
